fix the deprecated and removal api AccessController in java.security has been deprecated and marked for removal